--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.49MB/s(Youtube:不良林), server: 134.195.198.95, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇦 加拿大-1.83MB/s(Youtube:不良林), server: 134.195.198.95, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-1.34MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.96MB/s(Youtube:不良林), server: 134.195.198.95, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-175.0KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 未知国家-2.25MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇨🇳 中国-850.2KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-912.2KB/s(Youtube:不良林), server: 42.157.195.237, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-326.0KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇨🇳 中国-399.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-304.7KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇬🇧 英国-1.16MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林), server: 45.8.230.253, port: 852, type: vmess, uuid: 35b021ff-cf42-4b32-aeb7-4f634363df40, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 45.8.230.253}}
+  - {name: 🇺🇸 美国-161.2KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.35MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30120, type: trojan, password: 87f6eb37-36af-4347-95c7-8b3b0a3e9194, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-2.72MB/s(Youtube:不良林), server: 103.173.255.127, port: 443, type: trojan, password: 87f6eb37-36af-4347-95c7-8b3b0a3e9194, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.80MB/s(Youtube:不良林), server: 80.78.132.177, port: 443, type: trojan, password: 87f6eb37-36af-4347-95c7-8b3b0a3e9194, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-437.9KB/s(Youtube:不良林), server: 103.173.255.21, port: 443, type: trojan, password: 87f6eb37-36af-4347-95c7-8b3b0a3e9194, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-2.70MB/s(Youtube:不良林), server: 103.173.255.228, port: 443, type: trojan, password: 87f6eb37-36af-4347-95c7-8b3b0a3e9194, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-175.0KB/s(Youtube:不良林)
-      - 未知国家-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-850.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-304.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.35MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.72MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.80MB/s(Youtube:不良林)
+      - 🇻🇳 越南-437.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.70MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-175.0KB/s(Youtube:不良林)
-      - 未知国家-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-850.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-304.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.35MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.72MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.80MB/s(Youtube:不良林)
+      - 🇻🇳 越南-437.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.70MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-175.0KB/s(Youtube:不良林)
-      - 未知国家-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-850.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-304.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.35MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.72MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.80MB/s(Youtube:不良林)
+      - 🇻🇳 越南-437.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.70MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-175.0KB/s(Youtube:不良林)
-      - 未知国家-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-850.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-304.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.35MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.72MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.80MB/s(Youtube:不良林)
+      - 🇻🇳 越南-437.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.70MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-175.0KB/s(Youtube:不良林)
-      - 未知国家-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-850.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-304.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.35MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.72MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.80MB/s(Youtube:不良林)
+      - 🇻🇳 越南-437.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.70MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-175.0KB/s(Youtube:不良林)
-      - 未知国家-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-850.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-304.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.35MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.72MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.80MB/s(Youtube:不良林)
+      - 🇻🇳 越南-437.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.70MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-175.0KB/s(Youtube:不良林)
-      - 未知国家-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-850.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-304.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.35MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.72MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.80MB/s(Youtube:不良林)
+      - 🇻🇳 越南-437.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.70MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
