--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-850.2KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-912.2KB/s(Youtube:不良林), server: 42.157.195.237, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-326.0KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-664.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇸🇬 新加坡-2.12MB/s(Youtube:不良林), server: 54.179.88.143, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.75, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇦 加拿大-2.27MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇳 中国-399.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-161.2KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.35MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30120, type: trojan, password: 87f6eb37-36af-4347-95c7-8b3b0a3e9194, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-2.72MB/s(Youtube:不良林), server: 103.173.255.127, port: 443, type: trojan, password: 87f6eb37-36af-4347-95c7-8b3b0a3e9194, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.80MB/s(Youtube:不良林), server: 80.78.132.177, port: 443, type: trojan, password: 87f6eb37-36af-4347-95c7-8b3b0a3e9194, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-437.9KB/s(Youtube:不良林), server: 103.173.255.21, port: 443, type: trojan, password: 87f6eb37-36af-4347-95c7-8b3b0a3e9194, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-2.70MB/s(Youtube:不良林), server: 103.173.255.228, port: 443, type: trojan, password: 87f6eb37-36af-4347-95c7-8b3b0a3e9194, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2, server: 42.157.195.229, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.32MB/s(Youtube:不良林), server: 42.157.195.238, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3, server: 42.157.195.245, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 4, server: 42.157.195.241, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-330.9KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-850.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-664.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.35MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.80MB/s(Youtube:不良林)
-      - 🇻🇳 越南-437.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 4
+      - 🇨🇳 中国-330.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-850.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-664.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.35MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.80MB/s(Youtube:不良林)
-      - 🇻🇳 越南-437.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 4
+      - 🇨🇳 中国-330.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-850.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-664.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.35MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.80MB/s(Youtube:不良林)
-      - 🇻🇳 越南-437.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 4
+      - 🇨🇳 中国-330.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-850.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-664.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.35MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.80MB/s(Youtube:不良林)
-      - 🇻🇳 越南-437.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 4
+      - 🇨🇳 中国-330.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-850.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-664.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.35MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.80MB/s(Youtube:不良林)
-      - 🇻🇳 越南-437.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 4
+      - 🇨🇳 中国-330.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-850.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-664.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.35MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.80MB/s(Youtube:不良林)
-      - 🇻🇳 越南-437.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 4
+      - 🇨🇳 中国-330.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-850.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-664.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-161.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.35MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.80MB/s(Youtube:不良林)
-      - 🇻🇳 越南-437.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 4
+      - 🇨🇳 中国-330.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
