--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-664.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇸🇬 新加坡-2.12MB/s(Youtube:不良林), server: 54.179.88.143, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇳 中国-1.32MB/s(Youtube:不良林), server: 14.152.92.73, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.75, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇦 加拿大-2.27MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-399.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2, server: 42.157.195.229, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.32MB/s(Youtube:不良林), server: 42.157.195.238, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3, server: 42.157.195.245, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 4, server: 42.157.195.241, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-912.2KB/s(Youtube:不良林), server: 42.157.195.237, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2, server: 42.157.195.235, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇰🇷 韩国-1.60MB/s(Youtube:不良林), server: 13.209.18.199, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3, server: 42.157.195.241, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-330.9KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇬🇧 英国-1.45MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 阿联酋-2.13MB/s(Youtube:不良林), server: 193.123.67.0, port: 11188, type: vmess, uuid: 280683d0-369c-42e9-be4b-e723a73b7785, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 193.123.67.0}}
+  - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: free-node-ar-1.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: free-node-ar-1.texo.network, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-664.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇰🇷 韩国-1.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 4
       - 🇨🇳 中国-330.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.45MB/s(Youtube:不良林)
+      - 阿联酋-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-664.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇰🇷 韩国-1.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 4
       - 🇨🇳 中国-330.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.45MB/s(Youtube:不良林)
+      - 阿联酋-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-664.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇰🇷 韩国-1.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 4
       - 🇨🇳 中国-330.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.45MB/s(Youtube:不良林)
+      - 阿联酋-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-664.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇰🇷 韩国-1.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 4
       - 🇨🇳 中国-330.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.45MB/s(Youtube:不良林)
+      - 阿联酋-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-664.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇰🇷 韩国-1.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 4
       - 🇨🇳 中国-330.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.45MB/s(Youtube:不良林)
+      - 阿联酋-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-664.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇰🇷 韩国-1.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 4
       - 🇨🇳 中国-330.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.45MB/s(Youtube:不良林)
+      - 阿联酋-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-664.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-399.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇰🇷 韩国-1.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 4
       - 🇨🇳 中国-330.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.45MB/s(Youtube:不良林)
+      - 阿联酋-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
